--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="icon" href="img/Vector12.svg" type="image/svg">
 	<title>Lesson 17 - Курс Зима 2022</title>
 </head>
 <body>
@@ -40,6 +41,7 @@
 							<li class="menu__item"><a href="#" class="menu__link">About</a></li>
 						</ul>
 					</nav>
+					<a href="" class="nav__header_button"></a>
 					<div class="nav-header__icons">
 						<a href="#" class="nav-header__icon">
 							<img src="img/search.svg" alt="
